--- a/src/config.json
+++ b/src/config.json
@@ -7,6 +7,12 @@
     "width": 24,
     "height": 24
   },
+  "player": {
+      "posX": 360,
+      "posY": 588,
+      "color": "0xFFFFFF"
+  },
+  "enemies": [],
   "walls": [
     [
       {},
