Redesigned the Palette class.

--- a/src/config.json
+++ b/src/config.json
@@ -10,7 +10,7 @@
     "EnemyFrightened": "#2962FF",
     "Wall": "#795548",
     "Door": "#BA68C8",
-    "Dot": "#B0BEC5",
+    "Dot": "#388E3C",
     "Energizer": "#FFEA00"
   },
   "grid": {
