--- a/src/config.json
+++ b/src/config.json
@@ -9,7 +9,7 @@
     "Clyde": "#FFC107",
     "EnemyFrightened": "#2962FF",
     "Wall": "#795548",
-    "Door": "#BA68C8",
+    "Door": "#78909C",
     "Dot": "#388E3C",
     "Energizer": "#FFEA00"
   },
@@ -80,6 +80,16 @@
 	"row": 32,
 	"column": 1
       }
+    }
+  ],
+  "doors": [
+    {
+      "row": 13,
+      "column": 14
+    },
+    {
+      "row": 13,
+      "column": 15
     }
   ],
   "energizers": [
