Replaced more behaviors with actions.

--- a/src/config.json
+++ b/src/config.json
@@ -7,7 +7,7 @@
     "Inky": "#82B1FF",
     "Pinky": "#FF80AB",
     "Clyde": "#FFC107",
-    "EnemyFrightened": "#2962FF",
+    "EnemyFrightened": "#BDBDBD",
     "Wall": "#795548",
     "Door": "#78909C",
     "Dot": "#388E3C",
